src/objects/FinServ__LookupSearchConf__mdt.object
<CustomObject>
    <description>Specifies the fields to be searched in a lookup search.</description>
    <fields>
        <fullName>FinServ__ImplementationClass__c</fullName>
        <label>Implementation Class</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PlaceholderText__c</fullName>
        <label>Placeholder Text</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ViewName__c</fullName>
        <label>View Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>LookupSearchConf</label>
    <pluralLabel>LookupSearchConfs</pluralLabel>
</CustomObject>